# mi-sensor-collector

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.ble.yml  docker-compose.yml  start-dev.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py  test.py
backend/app/: config.py  database.py  main.py
backend/app/api/: alert_rules.py  readings.py  sensors.py
backend/app/models/: __init__.py  alert_rule.py  reading.py  sensor.py
backend/app/schemas/: alert_rule.py  reading.py  sensor.py
backend/app/services/: alert_engine.py  ble_scanner.py  homekit_bridge.py
backend/app/services/notifiers/: __init__.py  base.py  email_notifier.py  line_notifier.py  telegram_notifier.py
backend/tests/: conftest.py  test_alert_engine.py  test_alert_engine_integration.py  test_api_alert_rules.py  test_api_readings.py  test_api_readings_filters.py  test_api_sensors.py  test_api_sensors_trigger.py  test_ble_parser.py  test_health.py  test_notifiers.py
docs/: index.html
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AlertRuleForm.jsx  AlertRuleList.jsx  Navbar.jsx  SensorCard.jsx  SensorChart.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: AlertRulesPage.jsx  Dashboard.jsx  HistoryPage.jsx  SensorsPage.jsx
